update redirect file

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <head>
-    <meta http-equiv="refresh" content="0; URL=https://icaropablo.github.io/dest/presentation/home.html" />
+    <meta http-equiv="refresh" content="0; URL=dest/presentation/home.html" />
 </head>
